perbaikan footer contact us

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     </section>
 
     <!--  Contact Us  -->
-    <section id="contactus" class="contact mb-5 pt-5 bg-light">
+    <section id="contactus" class="contact pb-5 pt-5 bg-light">
         <div class="container">
 
             <div class="row pt-4 mb-4">
