--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-info">
       <div class="container">
-        <a class="navbar-brand" href="#"><img src="img/icon.jpg" style="width: 40%;"></a>
+        <a class="navbar-brand" href="#"><img src="img/icon.jpg"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -78,9 +78,9 @@
           <h2>About Us</h2>
         </div>
 
-        <div class="row justify-content-center text-center fs-5">
+        <div class="row">
 
-          <div class="col-md-4">
+          <div class="col-md-6">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae beatae similique quibusdam tempore consequatur eius harum modi laboriosam consectetur et velit, nostrum rerum placeat mollitia. Non voluptates, nostrum minus et.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -89,7 +89,7 @@
             cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
             proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-6">
             <p>Lorem ipsum, dolor sit amet, consectetur adipisicing elit. Fugiat provident incidunt soluta atque quia iste, id neque, error. Laborum fugiat dolor asperiores neque perferendis tempora quod voluptate quae est quo.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
